[package]
name = "jekyll-comments"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
clap = { version = "4.3.19", features = ["derive"] }
hyper = { version = "0.14.27", features = ["full"] }
md5 = "0.7.0"
octocrab = "0.28.0"
regex = "1.9.1"
serde = { version = "1.0.175", features = ["derive"] }
time = "0.3.23"
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
